--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Workout Finder – ExerciseDB</title>
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
@@ -40,6 +40,7 @@
     <section id="results" class="results"></section>
   </main>
 
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
+
